# School

./: .gitignore  README.md  algebra_lineare_ed_elementi_di_geometria.md  analisi_matematica_1.md  introduzione_alla_programmazione_e_laboratorio.md
algebra_lineare_ed_elementi_di_geometria/: algebra_lineare_ed_elementi_di_geometria.md  applicazioni_lineari.md  tmp.md
analisi_matematica_1/: analisi_matematica_1.md  tmp.md  topologia_di_R.md
analisi_matematica_1/code/Teorema degli zeri/: Teorema_degli_zeri.html
analisi_matematica_1/code/Teorema_degli_zeri/: Teorema_degli_zeri.ipynb
code/: IntroProgLab2023
code/dispensa_10/10_1/: main.c
code/dispensa_10/10_10/: main.c
code/dispensa_10/10_11/: main.c
code/dispensa_10/10_12/: main.c
code/dispensa_10/10_14/: main.c
code/esempio_03/: main.c
img/: gaussiana.avif
primo_anno/analisi_matematica_2/: analisi_matematica_2.md  old.md  tmp.md
primo_anno/introduzione_alla_fisica/: discorsivo.md  grafici.py  introduzione_alla_fisica.md
secondo_anno/algoritmi_di_ottimizzazione/: algoritmi_di_ottimizzazione.md
secondo_anno/algoritmi_e_strutture_dati/: algoritmi_e_strutture_dati.md  conv
secondo_anno/analisi_numerica/: analisi_numerica.md  conv.sh
secondo_anno/basi_di_dati/: ai_cs.md  basi_di_dati.md  cs.md  sql_cheatscheet.md
secondo_anno/data_analytics/datasette/: food.db  pyproject.toml
secondo_anno/metodi_e_modelli_matematici_per_l_intelligenza_artificiale/: conv  conv_cs  cs.md  metodi_e_modelli_matematici_per_l_intelligenza_artificiale.md
y1/introduzione_alla_fisica/: introduzione_alla_fisica.md
(+114 files in other folders)
